--- a/flakes/nixpkgs-haskell/PLACEHOLDER.cabal
+++ b/flakes/nixpkgs-haskell/PLACEHOLDER.cabal
@@ -1,4 +1,4 @@
-cabal-version:      3.8
+cabal-version:      3.4
 -- The cabal-version field refers to the version of the .cabal specification,
 -- and can be different from the cabal-install (the tool) version and the
 -- Cabal (the library) version you are using. As such, the Cabal (the library)
@@ -11,7 +11,7 @@ cabal-version:      3.8
 --   http://haskell.org/cabal/users-guide/
 --
 -- The name of the package.
-name:               package
+name:               PLACEHOLDER
 
 -- The package version.
 -- See the Haskell package versioning policy (PVP) for standards
