--- a/flakes/nixpkgs-haskell/PLACEHOLDER.cabal
+++ b/flakes/nixpkgs-haskell/PLACEHOLDER.cabal
@@ -88,7 +88,7 @@ executable exe
     -- Other library packages from which modules are imported.
     build-depends:
         base,
-        package
+        PLACEHOLDER
 
     -- Directories containing source files.
     hs-source-dirs:   app
