--- a/flakes/nixpkgs-haskell/PLACEHOLDER.cabal
+++ b/flakes/nixpkgs-haskell/PLACEHOLDER.cabal
@@ -29,13 +29,13 @@ version:            0.1.0.0
 -- description:
 
 -- The license under which the package is released.
-license:            NONE
+license:            BSD-2-Clause
 
 -- The package author(s).
-author:             henrique.hsa2002@gmail.com
+author:             dark-ether
 
 -- An email address to which users can send suggestions, bug reports, and patches.
-maintainer:         dark-ether
+maintainer:         eldritch.cookie@disroot.org
 
 -- A copyright notice.
 -- copyright:
@@ -70,7 +70,7 @@ library
     hs-source-dirs:   src
 
     -- Base language which the package is written in.
-    default-language: Haskell2010
+    default-language: GHC2021
 
 executable exe
     -- Import common warning flags.
@@ -94,4 +94,4 @@ executable exe
     hs-source-dirs:   app
 
     -- Base language which the package is written in.
-    default-language: Haskell2010
+    default-language: GHC2021
